--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>GitHub Auth</title>
@@ -11,12 +11,12 @@
 <body x-data="app()" x-init="init()">
 
   <template x-if="!loggedIn">
-      <button @click="login()">Login with GitHub</button>
+    <button @click="login()">Login with GitHub</button>
   </template>
 
   <template x-if="loggedIn">
     <div>
-        <p>Logged in</p>
+      <p>Logged in</p>
       <button @click="logout()">Logout</button>
     </div>
   </template>
@@ -24,26 +24,21 @@
   <script>
     function app() {
       return {
-        get loggedIn() {
-          return !!localStorage.getItem("token");
-        },
+        loggedIn: false,
 
-        logout() {
-          localStorage.removeItem("token");
-          location.reload()
-        },
         init() {
-          const params = new URLSearchParams(window.location.search);
-          const token = params.get("token");
-
-          if (token) {
-            localStorage.setItem("token", token);
-            window.history.replaceState(null, "", window.location.pathname);
-          }
+          const cookies = Object.fromEntries(
+            document.cookie.split("; ").map(c => c.split("="))
+          );
+          this.loggedIn = !!cookies.token;
         },
 
         login() {
           window.location.href = "http://localhost:8000/login";
+        },
+
+        logout() {
+          window.location.href = "http://localhost:8000/logout";
         }
       }
     }
